# music-airflow

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  REFACTORING_PLAN.md  agents.md  mkdocs.yml  pyproject.toml  secrets.toml.example  todo.md
.devcontainer/: devcontainer.json
airflow/: airflow.cfg
docs/: complete-architecture.md  index.md  user-onboarding.md
docs/stylesheets/: extra.css
mcp/: airflow_docs.py  last_fm_docs.py  streamlit_docs.py
scripts/: install-airflow.sh  start-airflow.sh
src/dags/: example.py
src/music_airflow/: lastfm_client.py
src/music_airflow/app/: auth.py  data_loading.py  excluded_tracks.py  exclusions_ui.py  filtering.py  oauth_storage.py  playlist_export_ui.py  spotify_playlist.py  streamlit_app.py  youtube_playlist.py
src/music_airflow/dags/: aggregate_plays.py  backfill_user.py  candidate_generation.py  dimensions.py  extract_plays.py  generate_candidates.py  gold_plays.py  lastfm.py  lastfm_scrobbles.py  upsert_dimensions.py
src/music_airflow/dags/gold/: candidate_generation.py
src/music_airflow/dags/silver/: dimensions.py
src/music_airflow/extract/: __init__.py  dimensions.py  plays.py
src/music_airflow/transform/: __init__.py  candidate_generation.py  dimensions.py  gold_plays.py  plays.py
src/music_airflow/transformers/: __init__.py  scrobbles.py
src/music_airflow/utils/: __init__.py  constants.py  firestore_async.py  firestore_io_manager.py  lastfm_scraper.py  polars_io_manager.py  spotify_search.py  text_normalization.py  ytmusic_search.py
src/utils/: __init__.py  io_manager.py
tests/: test_dags.py  test_excluded_tracks.py  test_io_managers.py  test_lastfm_scraper.py  test_spotify.py  test_streamlit_app.py  test_text_normalization.py  test_youtube_playlist.py
tests/lastfm/: conftest.py  test_candidate_generation.py  test_dimensions.py  test_extract_plays.py  test_gold_plays.py  test_lastfm_client.py  test_transform_plays.py
